// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index test suite should render properly 1`] = `
<Provider>
  <ForwardRef(SafeAreaView)>
    <Component
      animationType="slide"
      hardwareAccelerated={false}
      visible={false}
    >
      <Main
        clearAll={[Function]}
        maxRequests={15}
        onPress={[Function]}
        onPressClose={[MockFunction]}
        onPressDetail={[Function]}
        reduxActions={Array []}
        rnRequests={Array []}
        testId="mainScreen"
        visible={false}
      />
    </Component>
  </ForwardRef(SafeAreaView)>
</Provider>
`;

exports[`Index test suite should render properly visible and enabled 1`] = `
<Provider>
  <ForwardRef(SafeAreaView)>
    <Component
      animationType="slide"
      hardwareAccelerated={false}
      visible={true}
    >
      <Main
        clearAll={[Function]}
        maxRequests={15}
        onPress={[Function]}
        onPressClose={[MockFunction]}
        onPressDetail={[Function]}
        reduxActions={Array []}
        rnRequests={Array []}
        testId="mainScreen"
        visible={true}
      />
    </Component>
  </ForwardRef(SafeAreaView)>
</Provider>
`;

exports[`Index test suite should render properly visible, enabled and maxRequest 1`] = `
<Provider>
  <ForwardRef(SafeAreaView)>
    <Component
      animationType="slide"
      hardwareAccelerated={false}
      visible={true}
    >
      <Main
        clearAll={[Function]}
        maxRequests={20}
        onPress={[Function]}
        onPressClose={[MockFunction]}
        onPressDetail={[Function]}
        reduxActions={Array []}
        rnRequests={Array []}
        testId="mainScreen"
        visible={true}
      />
    </Component>
  </ForwardRef(SafeAreaView)>
</Provider>
`;
